# project-wenah

./: .dockerignore  .env.example  .env.production  .gitignore  Dockerfile  Dockerfile.bak  Dockerfile.railway  Makefile  Procfile  README.md  docker-compose.yml  nixpacks.toml  pyproject.toml  railway.json  render.yaml  requirements.txt  start.py  vercel.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: cd.yml  ci.yml  pr.yml
data/laws/employment/: ada.yaml  title_vii.yaml
data/rules/decision_trees/: employment_rules.yaml
docs/: DEPLOYMENT.md  EXECUTIVE_SUMMARY.md  MONETIZATION_PLAN.md  SCORING_LOGIC.md  TECHNICAL_OVERVIEW.md
frontend/: index.html  vercel.json
src/wenah/: __init__.py  config.py
src/wenah/api/: __init__.py  main.py  schemas.py
src/wenah/api/routes/: __init__.py  assess.py  check.py  guidance.py
src/wenah/core/: __init__.py  engine.py  scoring.py  types.py
src/wenah/data/: __init__.py  embeddings.py  loaders.py  vector_store.py
src/wenah/llm/: __init__.py  claude_client.py  guardrails.py  prompts.py  rag_pipeline.py  text_extractor.py
src/wenah/rules/: __init__.py  rule_engine.py  rule_loader.py
src/wenah/rules/categories/: __init__.py  consumer.py  employment.py  housing.py
src/wenah/use_cases/: __init__.py  design_guidance.py  prelaunch_check.py  risk_dashboard.py
tests/: __init__.py  conftest.py  test_api.py  test_category_processors.py  test_data_components.py  test_data_loaders.py  test_employment_processor.py  test_guardrails_edge_cases.py  test_integration.py  test_llm_components.py  test_rule_engine.py  test_scoring.py  test_use_cases.py
